<resources>
    <string name="app_name">ChodzNaPiwo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="find_event">Znajdź wydarzenie</string>
    <string name="add_event">Dodaj wydarzenie</string>
    <string name="help_us">Wspomóż twórców</string>
    <string name="settings">Ustawienia</string>
    <string name="user">AppController.getInstance().getPrefManager().getUser().getName;</string>

    <string name="event_name">Nazwa wydarzenia</string>
    <string name="event_size_1">Jedna osoba</string>
    <string name="event_size_small">Małe (1-5 osób)</string>
    <string name="event_size_medium">Średnie (6-15 osób)</string>
    <string name="event_size_large">Melanż (ponad 15 osób)</string>

    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>

    <string name="maps">Mapy</string>
    <string name="pick_time">Wybierz czas</string>


    <string name="event_date">Data</string>
    <string name="event_list">Aktualne wydarzenia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_details">Nazwa wydarzenia</string>
    <string name="off">Dołącz</string>
    <string name="on">Bierzesz udział</string>
    <string name="event_details_name_text">Nazwa</string >
    <string name="event_details_date_text">Data</string> />
    <string name="event_details_type_text">Ile osób</string>
    <string name="event_details_description_text">Opis</string>
</resources>
