<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bait.chodznapiwo.service.EventDetailsFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/event_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/event_details_name_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/event_details_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_details_date_text"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/event_details_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_details_type_text"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/event_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_details_description_text"
            android:gravity="center_horizontal"/>

        <ToggleButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColorLink="@android:color/holo_green_dark"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:visibility="visible" />

    </LinearLayout>
</FrameLayout>
